# patientwords-engine

./: .gitignore  CITATION.cff  CLAUDE.md  DATA_LICENSE.md  HANDOFF.md  LICENSE  README.md  constraints.txt  imported_pairs.json  keyword_config.example.json  paired_stats.json  paired_stats_out.json  paired_stats_rigor.json  pyproject.toml  urgency_rows.json  urgency_shift.json
.claude/: settings.json
data/: advice_providers.example.json  advice_providers.json  advice_rubric.draft.json  advice_rubric.example.json  advice_scenarios.json  claims_manifest.json  context_prefixes.json  convergence.json  editorial_pins.json  jlens_depth.json  jlens_loglens.json  jlens_swaps.json  jlens_transport.json  jspace.json  misspelling_candidates.draft.json  patch_profile.json  patient_lexicon.draft.json  specialty_map.draft.json  steer_lowdose_spec.json  steer_pilot_spec.json  tag_mass.json  timeline.json  urgency_tiers.draft.json
docs/: activation_patching_design.md  advice_arm_extensions.md  advice_arm_handoff.md  advice_manual_vignettes.md  advice_manual_vignettes.template.json  advice_multiturn_design.md  advice_vignette_anchor_notes.md  analyses_20260708.json  archiving.md  audit1_read_maps.json  audit1_report.md  audit2_read_maps.json  audit2_report.md  audit_2026-07-21.md  backfill_accel_prompt.md  critic_standing_prompt.md  cross-model.md  emergency_stress_set.md  equivalence_screen_design.md  expansion_plan_20260722.md  fable_week_plan.md  feature_experiments_design.md  findings_synthesis.md  findings_synthesis_DRAFT_20260713.md  handoff_20260724_trace_pace.md  (+30 more)
(+3229 files in other folders)
