[tool.poetry]
name = "medlang-circuits"
version = "0.1.0"
description = "Pipeline for comparing attribution graphs of clinical vs. colloquial patient medical language (gemma-2-2b + Gemma Scope transcoders)."
authors = ["Neuronpedia"]
readme = "README.md"
packages = [{ include = "medlang_circuits" }]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
matplotlib = "^3.8.0"
networkx = "^3.2"
anthropic = { version = ">=0.40.0", optional = true }
openpyxl = { version = "^3.1", optional = true }

[tool.poetry.extras]
llm = ["anthropic"]
sheets = ["openpyxl"]

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
ruff = "^0.9.0"

[tool.poetry.scripts]
medlang-compare = "medlang_circuits.cli:main"
medlang-batch-eval = "medlang_circuits.batch_eval:main"
medlang-evaluate = "medlang_circuits.evaluate_models:main"
medlang-generate = "medlang_circuits.scenario_gen:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
